# Enterprise-Knowledge-Copilot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/audit/: logging.py
backend/app/auth/: dependencies.py  jwt.py  router.py
backend/app/config/: settings.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: 0001_init.sql  0002_documents.sql  0003_document_versioning.sql  README.md
backend/app/ingestion/: chunking.py  router.py  schemas.py  service.py  versions.py
backend/app/multitenancy/: __init__.py  context.py  dependencies.py  middleware.py  router.py
backend/app/observability/: README.md  __init__.py  metrics.py  setup.py  tracing.py
backend/app/query/: router.py
backend/app/rag/: __init__.py  answer_verification.py  audit_integration.py  citations.py  embeddings.py  pipeline.py  qa.py  rerank.py  retrieval.py  schemas.py  source_mapping.py  vector_store.py  verification.py
backend/app/rbac/: __init__.py  checks.py  dependencies.py  policy.py  schema.py
backend/app/storage/: s3.py
backend/app/workspaces/: router.py  schemas.py  service.py
backend/tests/: test_ingestion_pipeline.py  test_rag_query.py  test_verification_grounding.py
docs/: API_DOCUMENTATION.md  architecture-overview.md
