[tool.poetry]
name = "enterprise-knowledge-copilot-backend"
version = "0.1.0"
description = "Enterprise Knowledge Copilot backend (RAG + RBAC + audit + observability)"
authors = ["BlackboxAI <blackboxai@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
ulid-py = "^1.1.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
python-multipart = "^0.0.9"
PyJWT = "^2.8.0"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
bcrypt = "^4.1.2"
SQLAlchemy = "^2.0.30"
psycopg = { version = "^3.2.1", extras = ["binary"] }
psycopg-binary = "^3.2.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
redis = "^5.0.4"

# RAG
langchain = "^0.2.12"
langchain-community = "^0.2.11"
langchain-text-splitters = "^0.2.2"

# Embeddings / LLM providers (choose one via env)
openai = "^1.30.1"

# Observability
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
opentelemetry-exporter-prometheus = "^0.46b0"

# Vector / hybrid helpers
pgvector = "^0.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
ruff = "^0.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

